overflow fixed

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -88,7 +88,7 @@ h2 {
   align-items: start;
   padding-top: 30px;
   float: none;
-  height: 560px;
+  height: 590px;
   border-radius: 5px;
   overflow: scroll;
 }
@@ -106,7 +106,7 @@ h2 {
 }
 .mainlist {
   height: 500px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .listhead {
   position: fixed;
@@ -124,7 +124,7 @@ position: relative;
   background-color: rgba(255, 115, 115, 0.652);
 }
 .description {
-  overflow: scroll;
+  overflow: hidden;
 }
 .trash {
   color: red;
